antlr/PPParser.py
# Generated from ./antlr/PP.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PPParser ( Parser ):

    grammarFileName = "PP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'print('", "');'", "'input'", "'IF('", 
                     "')'", "';'", "'=='", "'!='", "'>'", "'<'", "'('", 
                     "'AND'", "'OR'", "'+'", "'-'", "'/'", "'*'", "'LOOP('", 
                     "'='", "'X'", "<INVALID>", "'0'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NONZERODIGIT", "ZERO" ]

    RULE_program = 0
    RULE_instruction = 1
    RULE_printExpression = 2
    RULE_inputExpression = 3
    RULE_conditionalStatement = 4
    RULE_condition = 5
    RULE_logicalExpression = 6
    RULE_arithmeticalExpression = 7
    RULE_loop = 8
    RULE_assignment = 9
    RULE_variableName = 10
    RULE_integer = 11
    RULE_conditionBody = 12
    RULE_loopBody = 13

    ruleNames =  [ "program", "instruction", "printExpression", "inputExpression", 
                   "conditionalStatement", "condition", "logicalExpression", 
                   "arithmeticalExpression", "loop", "assignment", "variableName", 
                   "integer", "conditionBody", "loopBody" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    NONZERODIGIT=21
    ZERO=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PPParser.EOF, 0)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PPParser.InstructionContext)
            else:
                return self.getTypedRuleContext(PPParser.InstructionContext,i)


        def getRuleIndex(self):
            return PPParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 28
                self.instruction()
                self.state = 31 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PPParser.T__0) | (1 << PPParser.T__3) | (1 << PPParser.T__17) | (1 << PPParser.T__19))) != 0)):
                    break

            self.state = 33
            self.match(PPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditionalStatement(self):
            return self.getTypedRuleContext(PPParser.ConditionalStatementContext,0)


        def assignment(self):
            return self.getTypedRuleContext(PPParser.AssignmentContext,0)


        def loop(self):
            return self.getTypedRuleContext(PPParser.LoopContext,0)


        def printExpression(self):
            return self.getTypedRuleContext(PPParser.PrintExpressionContext,0)


        def getRuleIndex(self):
            return PPParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = PPParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instruction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PPParser.T__3]:
                self.state = 35
                self.conditionalStatement()
                pass
            elif token in [PPParser.T__19]:
                self.state = 36
                self.assignment()
                pass
            elif token in [PPParser.T__17]:
                self.state = 37
                self.loop()
                pass
            elif token in [PPParser.T__0]:
                self.state = 38
                self.printExpression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmeticalExpression(self):
            return self.getTypedRuleContext(PPParser.ArithmeticalExpressionContext,0)


        def getRuleIndex(self):
            return PPParser.RULE_printExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintExpression" ):
                listener.enterPrintExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintExpression" ):
                listener.exitPrintExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintExpression" ):
                return visitor.visitPrintExpression(self)
            else:
                return visitor.visitChildren(self)




    def printExpression(self):

        localctx = PPParser.PrintExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_printExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(PPParser.T__0)
            self.state = 42
            self.arithmeticalExpression(0)
            self.state = 43
            self.match(PPParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PPParser.RULE_inputExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputExpression" ):
                listener.enterInputExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputExpression" ):
                listener.exitInputExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputExpression" ):
                return visitor.visitInputExpression(self)
            else:
                return visitor.visitChildren(self)




    def inputExpression(self):

        localctx = PPParser.InputExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_inputExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(PPParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.cond = None # LogicalExpressionContext
            self.con_body = None # ConditionBodyContext

        def logicalExpression(self):
            return self.getTypedRuleContext(PPParser.LogicalExpressionContext,0)


        def conditionBody(self):
            return self.getTypedRuleContext(PPParser.ConditionBodyContext,0)


        def getRuleIndex(self):
            return PPParser.RULE_conditionalStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionalStatement" ):
                listener.enterConditionalStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionalStatement" ):
                listener.exitConditionalStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionalStatement" ):
                return visitor.visitConditionalStatement(self)
            else:
                return visitor.visitChildren(self)




    def conditionalStatement(self):

        localctx = PPParser.ConditionalStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_conditionalStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(PPParser.T__3)
            self.state = 48
            localctx.cond = self.logicalExpression()
            self.state = 49
            self.match(PPParser.T__4)
            self.state = 50
            localctx.con_body = self.conditionBody()
            self.state = 51
            self.match(PPParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left_expr = None # ArithmeticalExpressionContext
            self.op = None # Token
            self.right_expr = None # ArithmeticalExpressionContext

        def arithmeticalExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PPParser.ArithmeticalExpressionContext)
            else:
                return self.getTypedRuleContext(PPParser.ArithmeticalExpressionContext,i)


        def getRuleIndex(self):
            return PPParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = PPParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            localctx.left_expr = self.arithmeticalExpression(0)
            self.state = 54
            localctx.op = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PPParser.T__6) | (1 << PPParser.T__7) | (1 << PPParser.T__8) | (1 << PPParser.T__9))) != 0)):
                localctx.op = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 55
            localctx.right_expr = self.arithmeticalExpression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left_expr = None # LogicalExpressionContext
            self.op = None # Token
            self.right_expr = None # LogicalExpressionContext
            self.cond = None # ConditionContext

        def logicalExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PPParser.LogicalExpressionContext)
            else:
                return self.getTypedRuleContext(PPParser.LogicalExpressionContext,i)


        def condition(self):
            return self.getTypedRuleContext(PPParser.ConditionContext,0)


        def getRuleIndex(self):
            return PPParser.RULE_logicalExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalExpression" ):
                listener.enterLogicalExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalExpression" ):
                listener.exitLogicalExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalExpression" ):
                return visitor.visitLogicalExpression(self)
            else:
                return visitor.visitChildren(self)




    def logicalExpression(self):

        localctx = PPParser.LogicalExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_logicalExpression)
        self._la = 0 # Token type
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PPParser.T__10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.match(PPParser.T__10)
                self.state = 58
                localctx.left_expr = self.logicalExpression()
                self.state = 59
                self.match(PPParser.T__4)
                self.state = 60
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==PPParser.T__11 or _la==PPParser.T__12):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 61
                self.match(PPParser.T__10)
                self.state = 62
                localctx.right_expr = self.logicalExpression()
                self.state = 63
                self.match(PPParser.T__4)
                pass
            elif token in [PPParser.T__14, PPParser.T__19, PPParser.NONZERODIGIT, PPParser.ZERO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                localctx.cond = self.condition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticalExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ArithmeticalExpressionContext
            self.integer_ = None # IntegerContext
            self.variable_name_ = None # VariableNameContext
            self.op = None # Token
            self.right = None # ArithmeticalExpressionContext

        def integer(self):
            return self.getTypedRuleContext(PPParser.IntegerContext,0)


        def variableName(self):
            return self.getTypedRuleContext(PPParser.VariableNameContext,0)


        def arithmeticalExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PPParser.ArithmeticalExpressionContext)
            else:
                return self.getTypedRuleContext(PPParser.ArithmeticalExpressionContext,i)


        def getRuleIndex(self):
            return PPParser.RULE_arithmeticalExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticalExpression" ):
                listener.enterArithmeticalExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticalExpression" ):
                listener.exitArithmeticalExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticalExpression" ):
                return visitor.visitArithmeticalExpression(self)
            else:
                return visitor.visitChildren(self)



    def arithmeticalExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PPParser.ArithmeticalExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_arithmeticalExpression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PPParser.T__14, PPParser.NONZERODIGIT, PPParser.ZERO]:
                self.state = 69
                localctx.integer_ = self.integer()
                pass
            elif token in [PPParser.T__19]:
                self.state = 70
                localctx.variable_name_ = self.variableName()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 78
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PPParser.ArithmeticalExpressionContext(self, _parentctx, _parentState)
                    localctx.left = _prevctx
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmeticalExpression)
                    self.state = 73
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 74
                    localctx.op = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PPParser.T__13) | (1 << PPParser.T__14) | (1 << PPParser.T__15) | (1 << PPParser.T__16))) != 0)):
                        localctx.op = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 75
                    localctx.right = self.arithmeticalExpression(4) 
                self.state = 80
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.cond = None # LogicalExpressionContext
            self.loop_body = None # LoopBodyContext

        def logicalExpression(self):
            return self.getTypedRuleContext(PPParser.LogicalExpressionContext,0)


        def loopBody(self):
            return self.getTypedRuleContext(PPParser.LoopBodyContext,0)


        def getRuleIndex(self):
            return PPParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = PPParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(PPParser.T__17)
            self.state = 82
            localctx.cond = self.logicalExpression()
            self.state = 83
            self.match(PPParser.T__4)
            self.state = 84
            localctx.loop_body = self.loopBody()
            self.state = 85
            self.match(PPParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.input_ = None # InputExpressionContext
            self.art_expr = None # ArithmeticalExpressionContext

        def variableName(self):
            return self.getTypedRuleContext(PPParser.VariableNameContext,0)


        def inputExpression(self):
            return self.getTypedRuleContext(PPParser.InputExpressionContext,0)


        def arithmeticalExpression(self):
            return self.getTypedRuleContext(PPParser.ArithmeticalExpressionContext,0)


        def getRuleIndex(self):
            return PPParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = PPParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.variableName()
            self.state = 88
            self.match(PPParser.T__18)
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PPParser.T__2]:
                self.state = 89
                localctx.input_ = self.inputExpression()
                pass
            elif token in [PPParser.T__14, PPParser.T__19, PPParser.NONZERODIGIT, PPParser.ZERO]:
                self.state = 90
                localctx.art_expr = self.arithmeticalExpression(0)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 93
            self.match(PPParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NONZERODIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(PPParser.NONZERODIGIT)
            else:
                return self.getToken(PPParser.NONZERODIGIT, i)

        def ZERO(self, i:int=None):
            if i is None:
                return self.getTokens(PPParser.ZERO)
            else:
                return self.getToken(PPParser.ZERO, i)

        def getRuleIndex(self):
            return PPParser.RULE_variableName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableName" ):
                listener.enterVariableName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableName" ):
                listener.exitVariableName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableName" ):
                return visitor.visitVariableName(self)
            else:
                return visitor.visitChildren(self)




    def variableName(self):

        localctx = PPParser.VariableNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_variableName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(PPParser.T__19)
            self.state = 96
            self.match(PPParser.NONZERODIGIT)
            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 97
                    _la = self._input.LA(1)
                    if not(_la==PPParser.NONZERODIGIT or _la==PPParser.ZERO):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume() 
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.minus = None # Token

        def NONZERODIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(PPParser.NONZERODIGIT)
            else:
                return self.getToken(PPParser.NONZERODIGIT, i)

        def ZERO(self, i:int=None):
            if i is None:
                return self.getTokens(PPParser.ZERO)
            else:
                return self.getToken(PPParser.ZERO, i)

        def getRuleIndex(self):
            return PPParser.RULE_integer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger" ):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)




    def integer(self):

        localctx = PPParser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_integer)
        self._la = 0 # Token type
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PPParser.T__14, PPParser.NONZERODIGIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==PPParser.T__14:
                    self.state = 103
                    localctx.minus = self.match(PPParser.T__14)


                self.state = 106
                self.match(PPParser.NONZERODIGIT)
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 107
                        _la = self._input.LA(1)
                        if not(_la==PPParser.NONZERODIGIT or _la==PPParser.ZERO):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume() 
                    self.state = 112
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                pass
            elif token in [PPParser.ZERO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(PPParser.ZERO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PPParser.InstructionContext)
            else:
                return self.getTypedRuleContext(PPParser.InstructionContext,i)


        def getRuleIndex(self):
            return PPParser.RULE_conditionBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionBody" ):
                listener.enterConditionBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionBody" ):
                listener.exitConditionBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionBody" ):
                return visitor.visitConditionBody(self)
            else:
                return visitor.visitChildren(self)




    def conditionBody(self):

        localctx = PPParser.ConditionBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_conditionBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 116
                self.instruction()
                self.state = 119 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PPParser.T__0) | (1 << PPParser.T__3) | (1 << PPParser.T__17) | (1 << PPParser.T__19))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PPParser.InstructionContext)
            else:
                return self.getTypedRuleContext(PPParser.InstructionContext,i)


        def getRuleIndex(self):
            return PPParser.RULE_loopBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopBody" ):
                listener.enterLoopBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopBody" ):
                listener.exitLoopBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoopBody" ):
                return visitor.visitLoopBody(self)
            else:
                return visitor.visitChildren(self)




    def loopBody(self):

        localctx = PPParser.LoopBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_loopBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 121
                self.instruction()
                self.state = 124 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PPParser.T__0) | (1 << PPParser.T__3) | (1 << PPParser.T__17) | (1 << PPParser.T__19))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[7] = self.arithmeticalExpression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def arithmeticalExpression_sempred(self, localctx:ArithmeticalExpressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 3)
         




